# museum_of_code

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  styles.css
.github/workflows/: continous_deployment.yaml  continous_integration.yaml
scripts/: check
src/: highlighter.rs  main.rs  thing.html
src/artifact/: artifact_impl.rs  artifact_model.rs  lang_utils.rs  mod.rs
src/artifacts/: a_star.py.yaml  arena_allocator.rs.yaml  ascii_donut.c.yaml  bigmalloc.c.yaml  boids.jl.yaml  borrow_checked_graph.rs.yaml  chained_ops.rs.yaml  dijkstra.py.yaml  factorial.ml.artifact  factorial.ml.yaml  fast_inverse_square.yaml  fearless_concurrency.rs.yaml  fibonacci.yaml  forkbomb.yaml  game_of_life.hs.yaml  goroutines.go.artifact  goroutines.go.yaml  hello_world.c.yaml  hello_world.clj.yaml  hello_world.dart.yaml  hello_world.erl.yaml  hello_world.ex.yaml  hello_world.go.yaml  hello_world.hs.yaml  hello_world.java.yaml  hello_world.jl.yaml  hello_world.js.yaml  hello_world.kt.yaml  hello_world.lua.yaml  hello_world.ml.yaml  hello_world.pl.yaml  hello_world.py.yaml  hello_world.rb.yaml  hello_world.rs.yaml  hello_world.sc.yaml  hello_world.swift.yaml  hello_world.zig.yaml  inline_asm.rs.yaml  kernel.c.yaml  linkedlist.py.yaml  (+20 more)
src/artifacts/featured/: quicksort_hs.html
src/code/: article.rs  articles.rs  artifact.rs  artifact_model.rs  highlighter.rs  lang.rs  lang_utils.rs  mod.rs  raw_artifact.rs
src/html_utils/: mod.rs  scroll.rs  tags.rs
src/pages/: about.rs  contact.rs  hall.rs  home.rs  mod.rs  nav.rs  tour.rs  wip.rs
src/pages/hall_components/: hall_nav.rs  (+2 more)
(+2 files in other folders)
