[package]
name = "museum_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5"}
yew = { version="0.21.0", features=["csr"]}
log = "0.4.20"
