[package]
name = "museum_of_code"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5"}
yew = { version="0.21.0", features=["csr"]}
log = "0.4.20"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


[build-dependencies]
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4.31"
